--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,53 +1,50 @@
+version: "3.9"
+
 services:
-  db:
+  database:
     image: postgres:16-alpine
-    container_name: db-dev
+    container_name: database_dev
     environment:
-      POSTGRES_DB: appdb
-      POSTGRES_USER: appuser
-      POSTGRES_PASSWORD: supersecret_dev
+      - POSTGRES_DB=appdb
+      - POSTGRES_USER=appuser
+      - POSTGRES_PASSWORD=supersecret_dev
     ports:
-      - "5432:5432"
+      - 5432:5432
     volumes:
-      - pgdata-dev:/var/lib/postgresql/data
+      - dbdata:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
+      test: ["CMD", "pg_isready", "-U", "appuser", "-d", "appdb"]
       interval: 5s
       timeout: 5s
       retries: 10
     networks:
-      - app-network
-  api:
+      - appnet
+
+  backend:
     image: node:lts-alpine
-
-    command: sh -c "npm install && npm run db:migrate && npm run dev"
-
-    container_name: api-dev
-
-    working_dir: /app
-
-    ports: 
-    - "3000:3000"
-    
+    container_name: backend_dev
+    working_dir: /usr/src/app
+    command: >
+      sh -c "
+        npm ci &&
+        npm run db:migrate &&
+        npm run dev
+      "
+    ports:
+      - 3000:3000
     volumes:
-      - type: bind
-        source: .
-        target: /app
-
-    networks:
-      - app-network
-
+      - .:/usr/src/app
     environment:
-      DATABASE_URL: postgres://appuser:supersecret_dev@db-dev:5432/appdb
-      PORT: 3000
-
+      - DATABASE_URL=postgres://appuser:supersecret_dev@database:5432/appdb
+      - PORT=3000
     depends_on:
-      - db
-
+      - database
+    networks:
+      - appnet
 
 networks:
-  app-network:
+  appnet:
     driver: bridge
 
 volumes:
-  pgdata-dev:
+  dbdata:
